# Law-Agent

./: .gitignore  main.py  pyproject.toml
app/: database.py  main.py
app/api/: agent.py  database.py  server.py
app/api/db/: database.db
app/db/: database.db
app/frontend/: package-lock.json  package.json  vite.config.js
app/frontend/src/: App.svelte  app.css
app/frontend/src/lib/: ChatCanvas.svelte  Sidebar.svelte  store.js
db/: database.db  database.db-shm  database.db-wal
experimenting/: chat.py  test.ipynb
src/: test.ipynb
