[project]
name = "law-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.11",
    "jupyter>=1.1.1",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "pymupdf4llm>=1.27.2.2",
    "python-fasthtml>=0.13.2",
]
