[project]
name = "law-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.11",
    "fastapi>=0.135.3",
    "jupyter>=1.1.1",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "pymupdf4llm>=1.27.2.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
    "sqlite-vec>=0.1.9",
]
